# Megatron-LM

./: .gitignore  dfccl_script.sh  moe_script.sh  new_dfccl_script.sh  pretrain_gpt.py  pretrain_gpt_parameters.yaml  sbatch_dfccl_script.sh  sbatch_dfccl_script_2m_3090.sh  singularity_script.sh  slurm-3132202-1m8c数coll.out  slurm-3132203.out  slurm-3132214.out  slurm-3132221.out  slurm-3132325.out  slurm-3132333.out  slurm-3132337.out  slurm-3132373.out  slurm-3132412.out  slurm-3132795.out  slurm-3141711.out  slurm-3141881-1m8c数coll.out  slurm-3141940.out  slurm-singularity-8卡coll cnt.out
dev/ddp_cuda_class_py/: CMakeLists.txt
dev/ddp_cuda_class_py/include/: my_class.h
dev/ddp_cuda_class_py/src/: my_class.cpp  wrapper.cpp
dev/multi_py_dfccl/: CMakeLists.txt  caller.py  dfccl_wrapper.py
dev/multi_py_dfccl/include/: dfccl_extension.h
dev/multi_py_dfccl/src/: wrapper.cpp
dev/py_dfccl/: CMakeLists.txt  caller.py  caller_single.py  dfccl_wrapper.py  main.py
dev/py_dfccl/include/: dfccl_extension.h
dev/py_dfccl/src/: dfccl_extension.cpp  dfccl_extension.cu  wrapper.cpp
dev/test_cu_py/: main.py
dev/torch_ar/: torch_ar.py
examples/gpt3/: train_gpt3_175b_distributed.sh
megatron/core/distributed/: distributed_data_parallel.py  param_and_grad_buffer.py  single_group_test_dfccl.py  test_dfccl.py
megatron/core/models/gpt/: gpt_layer_specs.py
megatron/core/pipeline_parallel/: schedules.py
megatron/core/tensor_parallel/: layers.py
megatron/training/: training.py
para_scripts/: run.sh
results/: a6000-9-72-181-dp-dfccl.out  a6000-9-72-181-nccl.out  sing-18-288-222-nccl.out  sing-9-72-222-dp-dfccl.out  sing-9-72-222-nccl.out  slurm-2954577-sb-18-288-222-dp-dfccl.out  slurm-2955360-sb-18-288-222-dptp-dfccl.out  slurm-2956593-sb-18-288-242-nccl.out  slurm-2956653-sb-18-288-242-dptp-dfccl4.out  slurm-2957565-sb-9-72-181-nccl.out  slurm-2957663-sb-18-288-242-dp-dfccl.out  slurm-2968422-sb-18-288-222-nccl.out  slurm-2968520-sb-18-288-242-nccl.out
test_cu_py/: CMakeLists.txt  vector_add.cu  vector_add_wrapper.cpp
